--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
-* {
-	/* border: 1px blue dashed; */
-	box-sizing: border-box;
-}
-
+* { 
+	/* border: 1px dashed blue; */
+	box-sizing: border-box; }
 
 /* Clearfix */
 .clearfix {
@@ -20,9 +18,25 @@
 }
 
 body {
-	padding: 0;
-	margin: 0;
-	font-family: 'Helvetica Neue';
+  padding: 0;
+  margin: 0;
+  font-family: 'Helvetica Neue', helvetica, sans-serif;
+}
+
+a {
+  transition: 333ms all ease-in-out;
+  color: #9a9a9a;
+}
+
+a:hover {
+  color: #FB8B6F;
+}
+
+/* Header */
+header {
+  background: #ccc;
+  padding: 10px;
+  margin-bottom: 20px;
 }
 
 /* Cancel the header margin on home page. */
@@ -30,87 +44,103 @@ body#home header {
   margin-bottom: 0;
 }
 
-header . {
+header .row {
   margin-bottom: 0;
 }
 
-a {
-	text-decoration: none;
-	color: #9a9a9a;
+.logo {
+  float: left;
+  width: 65px;
 }
 
-header {
-  background: #d8d8d8;
-  padding: 10px;
-  margin-bottom: 20px;
-  border-bottom: 2px #c5c5c5 solid;
+nav {
+  margin-top: 21px;
 }
 
-.navbar {
-	text-decoration: none;
-	background-color: #d8d8d8;
-	
-	padding: 10px 55px 10px 55px;
+header nav {
+  float: right;
+  text-align: right;
 }
 
-.nav {
-	float: right;
+nav a {
+  margin-right: 20px;
+  font-size: 13px;
+  color: #444;
+  text-decoration: none;
 }
 
-div.logo {
-	height: 55px;
-	width: 55px;
-	border-radius: 50%;
-	color: #fff;
-	font-size: .6rem;
-	text-align: center;
-	background-color: #9a9a9a;
-	float: left;
+nav a:last-of-type {
+  margin: 0;
 }
 
+
+
+/* Hero */
 .hero {
-	text-align: center;
-	background-color: #e3e3e3;
-	color: #8a8b8c;
+  background: #ccc;
 }
 
 .hero h1 {
-	padding: 100px;
+  margin: 0;
+  padding: 120px 0;
+  color: white;
+  text-shadow: 0 0 10px #444;
+  text-align: center;
 }
 
-h2 {
-	color: #bebebe;
+/* Columns & Row */
+.row {
+  width: 90%;
+  max-width: 800px;
+  margin: 0 auto 20px;
 }
 
-p {
-	color: #000;
+.column {
+  float: left;
+  margin-right: 2%;
 }
 
-.col {
-  	width: 90%;
-  	max-width: 800px;
-  	margin: 0 auto 20px;
+.column.two-third {
+  width: 65%;
+}
+.column.one-half {
+  width: 49%;
+}
+.column.one-third {
+  width: 32%
 }
 
-.one {
-	float: left;
-	width: 50%;
-	padding: 20px;
+.column:last-of-type {
+  margin-right: 0;
 }
 
-.two {
-	float: right;
-	width: 50%;
-	padding: 20px;
-	border-left: 1px #b5b5b5 solid;
-}
-
+/* Footer */
 footer {
-	padding: 20px 10px 10px 15px;
-	text-align: center;
-	font-size: .6rem;
-	border-top: 2px #c5c5c5 solid;
-	color: #9a9a9a;
-	background-color: #d8d8d8;
+  background: #d8d8d8;
+  margin-top: 60px;
+  padding: 5px 0;
+  font-size: .4rem;
+  text-align: center;
 }
 
+/* Responsive */
+@media (max-width: 500px) {
+  header {
+    text-align: center;
+  }
+
+  .logo {
+    float: none;
+    width: 80px;
+  }
+
+  header nav {
+    float: none;
+    text-align: center;
+  }
+
+  .column {
+    width: 100% !important;
+    margin-right: 0;
+  }
+}
